# chess

./: .gitignore  BeginnerEngine.hpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  ChessEngine.hpp  ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  ExpertEngine.cpp  Game.cpp  Game.hpp  King.cpp  King.h  Knight.cpp  Knight.h  Makefile  Move.hpp  Pawn.cpp  Pawn.h  PromotionSquare.cpp  PromotionSquare.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  color.h  constants.cpp  helpers.cpp  main.cpp  requirements.txt  train_chess_model.py
Utils/: constants.cpp  helpers.cpp
include/: Color.h  Pawn.h  Queen.h  Rook.h  ai_engine.hpp  board.hpp  game.hpp  game_modes.hpp  online_manager.hpp  piece.hpp  position_evaluator.hpp
include/pieces/: king.hpp
include/ui/: game_ui.hpp
lambda/: config.json  game_server.py
models/: cnn.py
scripts/: chess_dataset.py  create_aws_infrastructure.sh  deploy_lambda.sh  generate_opening_book.py  generate_training_data.py  train_cnn.py
server/: websocket_server.py
src/: BeginnerEngine.cpp  Bishop.cpp  ChessEngine.cpp  ChessGame.cpp  IntermediateEngine.cpp  King.cpp  game_modes.cpp  main.cpp
src/ui/: game_ui.cpp
tests/: test_chess_engine.py
